# docdistillery

./: .gitignore  AGENTS.md  README.md  provenance_example.pdf.json  pyproject.toml  requirements.txt  ruff.toml  setup.sh
.github/workflows/: ci.yml
examples/: provenance_example.pdf.json  summarize_pdf.py
src/pipeline/: __init__.py  chunk.py  cli.py  csv2story.py  csv_insights.py  dedup.py  embed.py  exporter.py  ingest.py  llm_adapter.py  retrieval.py  strategy.py  summarize.py  vectordb.py
tests/pipeline/: test_chunk.py  test_cli.py  test_csv2story.py  test_csv_insights.py  test_dedup.py  test_embed.py  test_exporter.py  test_ingest.py  test_llm_adapter.py  test_retrieval.py  test_strategy.py  test_summarize.py  test_vectordb.py
tests/pipeline/fixtures/: sample_data.csv  sample_doc.txt
